--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,4 +25,5 @@ dependencies {
     compile 'com.android.support:appcompat-v7:21.0.3'
     compile 'com.google.android.gms:play-services:7.0.0'
     compile files('libs/gson-2.2.4.jar')
+    compile files('libs/universal-image-loader-1.9.3.jar')
 }
